--- a/tmpl_2017-02.vcxproj
+++ b/tmpl_2017-02.vcxproj
@@ -229,6 +229,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BVH.cpp" />
+    <ClCompile Include="BVHNode.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="game.cpp" />
     <ClCompile Include="LightSources.cpp" />
@@ -241,9 +242,11 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="threads.cpp" />
+    <ClCompile Include="TopBVH.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BVH.h" />
+    <ClInclude Include="BVHNode.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="LightSources.h" />
@@ -255,6 +258,7 @@
     <ClInclude Include="surface.h" />
     <ClInclude Include="template.h" />
     <ClInclude Include="threads.h" />
+    <ClInclude Include="TopBVH.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="_readme.txt" />
