Correct distance calculations in traverse

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ ray-tracer.pdb
 
 ray-tracer_debug.exe
 ray-tracer_debug.pdb
+/Tmpl2017-02.exe
+/Tmpl2017-02.pdb
+/Tmpl2017-02_debug.exe
+/Tmpl2017-02_debug.pdb
